Closed Bug 1802320 Opened 2 years ago Closed 2 years ago

Field Alignment issue in `rust-bindgen` not being caught by `mach rusttests`

Categories

(Core :: General, defect)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox109 --- fixed

People

(Reporter: avandolder, Assigned: emilio)

References

Details

Attachments

(1 file)

When removing nsIRadioGroupContainer as a superclass of ShadowRoot, a C++ layout optimization is triggered which bindgen is unable to handle properly (see https://github.com/rust-lang/rust-bindgen/issues/380). mach rusttests is currently unable to detect this alignment failure between the C++ class and the generated Rust struct.

Blocks: 1685926
Assignee: nobody → emilio

It's unclear to me when they were disabled, but we do want to enable
these as otherwise there's no way to catch bindgen issues that can end
up in subtle bugs at best, or memory corruption at worst.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/836daf423ead Green up and re-enable style system layout tests. r=boris
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Regressions: 1802586
Pushed by mlaza@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/86366a8c0c63 Try to green up tier 2 i686-linux tests.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: 109 Branch → ---
Status: REOPENED → RESOLVED
Closed: 2 years ago2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Duplicate of this bug: 1802586
Blocks: 1803350

I filed bug 1803350 for the remaining issue.

Flags: needinfo?(emilio)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: